crates/check_cli/tests/snapshots/main_cases_handle_astro_files/lint_stdin_write_unsafe_successfully.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Input messages

```block
---
debugger;
---
<div></div>
```

# Emitted Messages

```block
---
---
<div></div>
```
