crates/check_cli/tests/snapshots/main_cases_handle_astro_files/sorts_imports_check.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
snapshot_kind: text
---
## `file.astro`

```astro
---
import { getLocale } from "astro:i18n";
import { Code } from "astro:components";
---
<div></div>
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.astro:2:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The imports and exports are not sorted.
  
    1 │ ---
  > 2 │ import { getLocale } from "astro:i18n";
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │ import { Code } from "astro:components";
    4 │ ---
  
  i Safe fix: Organize Imports (Check)
  
    1 1 │   
    2   │ - import·{·getLocale·}·from·"astro:i18n";
    3   │ - import·{·Code·}·from·"astro:components";
      2 │ + import·{·Code·}·from·"astro:components";
      3 │ + import·{·getLocale·}·from·"astro:i18n";
    4 4 │   
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
