crates/check_cli/tests/snapshots/main_cases_handle_astro_files/sorts_imports_write.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.astro`

```astro
---
import { Code } from "astro:components";
import { getLocale } from "astro:i18n";
---
<div></div>
```

# Emitted Messages

```block
Checked 1 file in <TIME>. Fixed 1 file.
```
